--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil Pengguna</title>
-  <link rel="stylesheet" href="2style.css"> <!-- Tautan ke file CSS -->
+  <link rel="stylesheet" href="2style.css">
 </head>
 <body>
 
@@ -16,12 +16,12 @@
   <p>Nama Pengguna: John Doe</p>
   <p>Email: john@example.com</p>
 
-  <!-- Tombol untuk Mengganti Profil -->
+
   <button onclick="window.location.href='ganti_profil.html'" class="btn">Ganti Profil</button>
 
-  <!-- Tombol untuk Keluar -->
+
   <button onclick="window.location.href='keluar.html'" class="btn">Keluar</button>
 </div>
 
 </body>
-</html>
+</html> -->
