--- a/3afterlog.html
+++ b/3afterlog.html
@@ -29,7 +29,7 @@
         <li><a href="#" class="header">Cek Destinasi</a></li>
         <li><a href="#" class="header">Booking</a></li>
         <li><a href="#" class="header">Tentang Kami</a></li>
-        <li><a href="profile.html"><img src="avatar1.png" alt="User Profile" class="user-avatar"></a></li>
+        <li><a href="profiles.php"><img src="avatar1.png" alt="User Profile" class="user-avatar"></a></li>
       </ul>
     </nav>
   </header>
@@ -71,7 +71,7 @@
             <ul>
               <li class="li1">📅 Bau nyale</li>
             </ul>
-            <p class="year">2024</p> <!-- Tambahkan tahun 2024 -->
+            <p class="year">2024</p> 
           </td>
         </tr>
       </tbody>
